@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-28T08:25:56Z",
-  "count" : 2,
+  "timestamp" : "2022-06-28T16:29:59Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
