@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-28T08:25:56Z",
+  "timestamp" : "2022-06-28T16:29:59Z",
   "count_outdated" : 2181,
   "uniques_outdated" : 448,
   "count" : 2223,
-  "uniques" : 475,
+  "uniques" : 474,
   "clones" : [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
