@@ -1,11 +1,11 @@
 {
   "count": 42,
-  "uniques": 12,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
