@@ -1,3 +1,10 @@
+2022-06-28T16:29:59Z:
+* notice: last 14d: unq all: 11 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 448 2181 / 475 2223
+* notice: next accum: outdated-unq outdated-all / unq all: 448 2181 / 474 2223
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-14 2022-06-28]
+
 2022-06-28T08:25:56Z:
 * notice: last 14d: unq all: 12 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 448 2181 / 474 2223
